# subliminal-learning

./: .env.template  README.md  pyproject.toml  setup.sh
scripts/: run_eval.py  run_feature_annotation.py  run_optuna_optim.py  run_pipeline.py  run_sae_caching.py  run_steering_vector.py  run_toy_models.py
subliminal_learning/: eval.py  pipeline.py  probe.py  prompt.py  steering.py  teacher.py  toy_model.py  utils.py
subliminal_learning/ft/: __init__.py  unsloth_service.py
subliminal_learning/llm/: __init__.py  hf_service.py  openai_service.py  tl_service.py  unsloth_service.py  vllm_service.py
subliminal_learning/sae/: __init__.py  sae_service.py
